updated to include footer

--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
         </div>
         </div>
       </div>
+      <footer>This project was coded by Amanda Lehman. It is <a href="https://github.com/Brumbles85/vanillaWeatherApp.git">open-sourced on GitHub</a> and <a href="https://profound-ganache-20ad3a.netlify.app">hosted on Netlify</a>. </footer>
     </div>
+    
     <script type="text/javascript" src="source/java.js"></script>
   </body>
 </html>
