--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="`utf-8`">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="source/styles.css" />
+    <link rel="stylesheet" href="source/mock.css" />
 
     <link
       rel="stylesheet"
@@ -31,10 +31,10 @@
                 autofocus="on"
                 id="search-text-input"
               />
-              <button input type="submit" value="Search">
+              <button input type="submit" value="Search" title="Search">
                 <i class="fa fa-search"></i>
               </button>
-              <button id="locationButton" >
+              <button id="locationButton" type="submit" title="Current Location">
                 Current Location
               </button>
             </form>
@@ -46,12 +46,14 @@
           <h2 class="date">Day & Time</h2>
           <ul class="weatherData">
             <li class="windSpeed">Wind speed</li>
-            <li class="Humidity">Humidity</li>
             <li class="highLow">High°/Low°</li>
             <li class="weatherDescription">Weather Description</li>
           </ul>
         </div>
-        <div class="col-3 bigWeather">☀️</div>
+        <div class="col-3 bigWeather">
+            <img src="" alt="clear" id="icon"  >
+            
+        </div>
 
         <div  id="currentTemp"class="col-3">
           <h3 class="bigTemp">75°</h3>
@@ -80,6 +82,6 @@
       <footer>This project was coded by Amanda Lehman. It is <a href="https://github.com/Brumbles85/vanillaWeatherApp.git">open-sourced on GitHub</a> and <a href="https://profound-ganache-20ad3a.netlify.app">hosted on Netlify</a>. </footer>
     </div>
     
-    <script type="text/javascript" src="source/java.js"></script>
+    <script type="text/javascript" src="source/mock.js"></script>
   </body>
 </html>
