--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="`utf-8`">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="source/mock.css" />
+    <link rel="stylesheet" href="source/styles.css" />
 
     <link
       rel="stylesheet"
@@ -51,7 +51,7 @@
           </ul>
         </div>
         <div class="col-3 bigWeather">
-            <img src="" alt="clear" id="icon"  >
+            <img src="☀️" alt="clear" id="icon"  >
             
         </div>
 
@@ -82,6 +82,6 @@
       <footer>This project was coded by Amanda Lehman. It is <a href="https://github.com/Brumbles85/vanillaWeatherApp.git">open-sourced on GitHub</a> and <a href="https://profound-ganache-20ad3a.netlify.app">hosted on Netlify</a>. </footer>
     </div>
     
-    <script type="text/javascript" src="source/mock.js"></script>
+    <script type="text/javascript" src="source/java.js"></script>
   </body>
 </html>
