--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 Current Location
               </button>
             </form>
-        </div>
+          </div>
       </div>
       <div class="row cityInfo">
         <div class="col-6">
@@ -57,27 +57,7 @@
         <div  id="currentTemp"class="col-3">
           <h3 class="showTemp"><span class="bigTemp">75° </span> <span class="units"><a href="#" id= "fahrenheit-link" class="active">F</a>  | <a href="#" id="celcius-link" >C</a></span></h3>
         </div>
-      </div>
-      <!--<div class="container-fluid">
-      <div class="row forecast justify-content-center">
-        <div class="col-sm-2">
-            <p >☀️<br>Monday</p>
-          </div>
-          <div class="col-sm-2">
-            <p class="text">🌤️<br>Tuesday</p>
-          </div>
-          <div class="col-sm-2">
-            <p class="text">🌧️<br>Wednesday</p>
-          </div>
-          <div class="col-sm-2">
-            <p class="text">🌤️<br>Thursday</p>
-          </div>
-          <div class="col-sm-2">
-            <p class="text">🌤️<br>Friday</p>
-          </div>
-        </div>
-        </div>-->
-      </div>
+      <div class="container-fluid"  id="forecast"></div>
       <footer>This project was coded by Amanda Lehman. It is <a href="https://github.com/Brumbles85/vanillaWeatherApp.git">open-sourced on GitHub</a> and <a href="https://profound-ganache-20ad3a.netlify.app">hosted on Netlify</a>. </footer>
     </div>
     
