Integrated forecast API

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </ul>
         </div>
         <div class="col-3 bigWeather">
-            <img src="http://openweathermap.org/img/wn/${response.data.weather[0].icon}@2x.png" alt="clear" id="icon"  >
+            <img src="" alt="clear" id="icon"  >
             
         </div>
 
