--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="`utf-8`" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="source/fake.css" />
+    <link rel="stylesheet" href="source/styles.css" />
 
     <link
       rel="stylesheet"
@@ -80,6 +80,6 @@
       </footer>
     </div>
 
-    <script src="source/fake.js"></script>
+    <script src="source/java.js"></script>
   </body>
 </html>
